--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
 		"mongoose": "^6.1.4",
-		"nodemon": "^2.0.15"
+		"multer": "^1.4.4",
+		"nodemon": "^2.0.15",
+		"stripe": "^8.195.0"
 	}
 }
